--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 sudo: required
 dist: trusty
+language: bash
+
 before_install:
 - sudo apt-get -qq update && sudo apt-get install -y --no-install-recommends texlive-fonts-recommended texlive-latex-extra texlive-fonts-extra dvipng texlive-latex-recommended
+
 script:
 - mkdir _build
 - pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build tex/your_file_1.tex
 - pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build tex/your_file_2.tex
+
 deploy:
   provider: releases
   api_key:
