--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ before_install:
 
 script:
 - mkdir _build
-- pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build tex/your_file_1.tex
-- pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build tex/your_file_2.tex
+- pdflatex -interaction=nonstopmode -halt-on-error -output-directory _build main.tex
 
 deploy:
   provider: releases
