--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: require
 dist: xenial
-language: bash
+language: shell
 
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
 
-
 script:
-  - bash run.sh ./ main
+  - sh run.sh ./ main
