--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: shell
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra
+  - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra libfont-freetype-perl texlive-math-extra 
 
 script:
   - sh run.sh ./ main
