--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ language: shell
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-fonts-recommended texlive-fonts-extra libfont-freetype-perl texlive-math-extra texlive-lang-european texlive-lang-german 
+  - sudo apt-get install -y texlive-base texlive-latex-base texlive-latex-extra texlive-science texlive-fonts-recommended texlive-fonts-extra libfont-freetype-perl texlive-math-extra texlive-lang-european texlive-lang-german 
 
 script:
   - sh run.sh ./ main
